--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,10 +1,10 @@
 <a href = "/todos/new">Create</a>
 
 <ul>
-  {{#each todos}}
+  {{#each todos}} 
   <li>
     {{{this.name}}}
-    <a href="#">detail</a>
+    <a href="/todos/{{{this.id}}}">detail</a>
     <a href="#">edit</a>
     <button type="submit">delete</button>
   </li>
