--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -6,7 +6,10 @@
     {{{this.name}}}
     <a href="/todos/{{{this.id}}}">detail</a>
     <a href="/todos/{{{this.id}}}/edit">edit</a>
+    <form action="/todos/{{{this.id}}}/delete" method="POST" style="display inline;">
     <button type="submit">delete</button>
+    </form>
+    
   </li>
   {{/each}}
 </ul>
