--- a/views/detail.handlebars
+++ b/views/detail.handlebars
@@ -3,6 +3,6 @@
   {{{todo.name}}}</p>
 <a href="/">back</a>
 <a href="/todos/{{{todo.id}}}/edit">edit</a>
-<form action="/todos/{{{todo.id}}}/delete" method="POST" style="display: inline;">
+<form action="/todos/{{{todo.id}}}/delete?_method=DELETE" method="POST" style="display: inline;">
 <button type="submit">delete</button>
 </form>
