--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,9 +4,23 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width={{{device-width}}}, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+    integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <title>Document</title>
 </head>
-<body>
-  {{{body}}}
+<body class="bg-light">
+  <header>
+    <nav class="navbar navbar-dark bg-primary justify-content-between">
+      <a href="/" class="navbar-brand">Todo List</a>
+      <a href="/todos/new" class="btn btn-outline-light">Create</a>
+    </nav>
+  </header>
+
+<main>
+  <div class="container mt-3">
+    {{{body}}}
+  </div>
+</main>
+  
 </body>
 </html>
