--- a/views/new.handlebars
+++ b/views/new.handlebars
@@ -1,5 +1,8 @@
 <form action="/todos" method="Post">
-  <input type="text" placeholder="name" name="name">
-  <button type="submit">Create</button>
-
+  <div class="input-group mb-3">
+    <input type="text" placeholder="name" name="name" class="form-control">
+    <div class="input-group-append">
+      <button type="submit" class="btn btn-success">Create</button>
+    </div>
+  </div>
 </form>
