--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -1,1 +1,33 @@
-<h2> Register</h2>
+
+<div class="row mt-5">
+  <div class="col-md-6 m-auto">
+    <h1 class="text-center mb-3">
+      Register
+    </h1>
+    <form action="/users/register" mehod="POST">
+    <div class="form-group">
+      <label for="name">Name</label>
+      <input type="name" id="name" name="name" class="form-control" placeholder="Enter Name" value="{{{name}}}">
+    </div>
+    <div class="form-group">
+      <label for="email">Email</label>
+      <input type="email" id="email" name="email" class="form-control" placeholder="Enter Email" value="{{{name}}}">
+    </div>
+    <div class="form-group">
+      <label for="password">Password</label>
+      <input type="password" id="password" name="password" placeholder="Create Password" value="{{{password}}}"class="form-control">
+    </div>
+    <div class="form-group">
+      <label for="password">Password</label>
+      <input type="password" id="password" name="password" placeholder="Create Password" value="{{{password2}}}"
+        class="form-control">
+    </div>
+    <button class="btn-primary btn btn-block">
+      Register
+    </button>
+    </form>
+    <p class="lead mt-4">Have an Account?
+      <a href="/users/login">Login</a>
+    </p>
+  </div>
+</div>
