--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -4,7 +4,7 @@
     <h1 class="text-center mb-3">
       Register
     </h1>
-    <form action="/users/register" mehod="POST">
+    <form action="/users/register" method="POST">
     <div class="form-group">
       <label for="name">Name</label>
       <input type="name" id="name" name="name" class="form-control" placeholder="Enter Name" value="{{{name}}}">
@@ -18,8 +18,8 @@
       <input type="password" id="password" name="password" placeholder="Create Password" value="{{{password}}}"class="form-control">
     </div>
     <div class="form-group">
-      <label for="password">Password</label>
-      <input type="password" id="password" name="password" placeholder="Create Password" value="{{{password2}}}"
+      <label for="password2">Password</label>
+      <input type="password" id="password2" name="password2" placeholder="Create Password" value="{{{password2}}}"
         class="form-control">
     </div>
     <button class="btn-primary btn btn-block">
