--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -15,7 +15,7 @@
         <button class="btn brn-primary btn-block">Login</button>
       </form> 
         <p class="lead mt-4">
-          No Account? <a href=""/users/register>Register</a>
+          No Account? <a href="/users/register">Register</a>
         </p>   
     </div>
   </div>
