--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,3 +1,4 @@
+<a href="todos/new" class="btn ntn-primary mb-3">Create</a>
 <ul class="list-group">
   {{#each todos}} 
   <li class="list-group-item">
