--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -13,6 +13,8 @@
           <input type="password" id="password" name="password" class="form-control" placeholder="Endte Password" />
         </div>
         <button class="btn brn-primary btn-block">Login</button>
+        <!-- 新增 facebook login button -->
+        <a href="/auth/facebook" class="btn btn-info btn-block">Facebook Login</a>
       </form> 
         <p class="lead mt-4">
           No Account? <a href="/users/register">Register</a>
